[package]
name = "carddb"
version = "1.0.0"
edition = "2021"
description = "Card database and account metadata merge helper"

[[bin]]
name = "carddb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
